# muxox

./: .aiignore  .gitignore  Cargo.toml  LOG_VIEWING_GUIDE.md  Makefile  PUBLISHING.md  README.md  muxox.example.toml  muxox.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  isolation.yml  release.yml
crates/muxox/: Cargo.toml
crates/muxox-core/: Cargo.toml
crates/muxox-core/src/: app.rs  app_tests.rs  config.rs  isolation.rs  lib.rs  log.rs  signal.rs  utils.rs  utils_tests.rs
crates/muxox-web/: Cargo.toml
crates/muxox-web/src/: lib.rs  mcp.rs  ui.rs  web.rs  web_script.js  ws_proto.rs  ws_proto_tests.rs
crates/muxox/src/: app.rs  config.rs  main.rs  signal.rs  utils.rs  web_style.css  web_ui.rs  ws_proto.rs
crates/muxox/src/modes/: init.rs  mod.rs  raw.rs  tui.rs  web.rs
crates/muxox/tests/: config_tests.rs  isolation_tests.rs  platform_specific_tests.rs  tui_tests.rs
crates/tui-bridge/: Cargo.toml
crates/tui-bridge/src/: lib.rs  main.rs  render.rs  tests.rs  view.rs
example/: README.md  muxox.toml  package.json  test-stdin.sh
npm/: .gitignore  .npmignore  README.md  install.js  package.json  sync-version.js
npm/lib/: updater.js
scripts/: build.sh  lint.sh  run-example.sh  setup-git-hooks.sh  test.sh
