[workspace]
resolver = "3"
members = [
    "crates/muxox",
    "crates/muxox-core",
    "crates/muxox-web",
    "crates/tui-bridge",
]
default-members = ["crates/muxox"]

[workspace.package]
version = "1.5.0"
version = "1.5.1"
edition = "2024"
authors = ["Geoff Seemueller <geoff@seemueller.io>"]
license = "MIT"
repository = "https://github.com/geoffsee/muxox"
homepage = "https://github.com/geoffsee/muxox"

[workspace.dependencies]
muxox-core = { version = "1.5.1", path = "crates/muxox-core" }
muxox-web = { version = "1.5.1", path = "crates/muxox-web" }
tui-bridge = { version = "1.5.1", path = "crates/tui-bridge" }
