[package]
name = "muxox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for muxox service orchestrator"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.28", features = ["signal", "process"] }
ratatui = "0.28"
