[package]
name = "muxox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for muxox service orchestrator"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
semver = "1"
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process", "sched"] }
