[package]
name = "muxox-web"
version = "0.1.0"
edition = "2024"

[dependencies]
muxox-core = { path = "../muxox-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
dioxus = { version = "0.7", features = ["fullstack", "ssr"] }
open = "5"
futures-util = "0.3"
