[package]
name = "muxox-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web interface for muxox service orchestrator"

[dependencies]
muxox-core.workspace = true
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
dioxus = { version = "0.7", features = ["fullstack", "ssr"] }
open = "5"
futures-util = "0.3"
