[package]
name = "muxox"
version = "1.0.1"
edition = "2024"
description = "A terminal-based service orchestrator and process multiplexer for development workflows"
authors = ["Geoff Seemueller <geoff@seemueller.io>"]
license = "MIT"
repository = "https://github.com/geoffsee/muxox"
homepage = "https://github.com/geoffsee/muxox"
documentation = "https://github.com/geoffsee/muxox"
readme = "../../README.md"
keywords = ["terminal", "tui", "multiplexer", "development", "process-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
libc = "0.2"
nix = { version = "0.28", features = ["signal", "process"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
dioxus = { version = "0.6", features = ["fullstack", "ssr"] }
open = "5"
tower = "0.4"
futures-util = "0.3"

[features]
unix = []
