[package]
name = "muxox"
version = "1.1.0"
edition = "2024"
description = "A terminal-based service orchestrator and process multiplexer for development workflows"
authors = ["Geoff Seemueller <geoff@seemueller.io>"]
license = "MIT"
repository = "https://github.com/geoffsee/muxox"
homepage = "https://github.com/geoffsee/muxox"
documentation = "https://github.com/geoffsee/muxox"
readme = "../../README.md"
keywords = ["terminal", "tui", "multiplexer", "development", "process-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
muxox-core = { path = "../muxox-core" }
muxox-web = { path = "../muxox-web" }
tui-bridge = { path = "../tui-bridge" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dioxus-core = "0.7"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nix = { version = "0.28", features = ["signal", "process"] }

[features]
unix = []
