[package]
name = "muxox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A terminal-based service orchestrator and process multiplexer for development workflows"
documentation = "https://github.com/geoffsee/muxox"
readme = "../../README.md"
keywords = ["terminal", "tui", "multiplexer", "development", "process-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
muxox-core.workspace = true
muxox-web.workspace = true
tui-bridge.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dioxus-core = "0.7"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nix = { version = "0.28", features = ["signal", "process"] }

[features]
unix = []
