[package]
name = "tui-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TUI rendering bridge between Dioxus and ratatui for muxox"

[dependencies]
dioxus-core = "0.7"
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
